<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/buttonBack"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/editNazev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nazevHry"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/textZanr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/zanrHry" />

        <Spinner
            android:id="@+id/spinnerZanr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" />

        <TextView
            android:id="@+id/textOdehrano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/odehranoHodin" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/editOdehrano"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/_0"
                    android:inputType="number"
                    android:text="@string/_0" />

                <ImageButton
                    android:id="@+id/buttonPlusOdehrano"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="35dp"
                    android:background="@null"
                    android:contentDescription="@string/plus"
                    android:scaleType="fitCenter"
                    android:src="@drawable/add_2" />

                <ImageButton
                    android:id="@+id/buttonMinusOdehrano"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="35dp"
                    android:background="@null"
                    android:contentDescription="@string/minus"
                    android:scaleType="fitCenter"
                    android:src="@drawable/remove_2" />
            </TableRow>

        </TableLayout>

        <CheckBox
            android:id="@+id/checkBoxDohranoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/dohrano" />

        <TextView
            android:id="@+id/textPostup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/postup" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/editPostup"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/_0"
                    android:inputType="number"
                    android:text="@string/_0" />

                <ImageButton
                    android:id="@+id/buttonPlusPostup"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="35dp"
                    android:background="@null"
                    android:contentDescription="@string/plus"
                    android:scaleType="fitCenter"
                    android:src="@drawable/add_2" />

                <ImageButton
                    android:id="@+id/buttonMinusPostup"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="35dp"
                    android:background="@null"
                    android:contentDescription="@string/minus"
                    android:scaleType="fitCenter"
                    android:src="@drawable/remove_2" />
            </TableRow>

        </TableLayout>

        <ProgressBar
            android:id="@+id/progressBarPostup"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:scaleY="4" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textHodnoceni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/hodnoceni" />

                <TextView
                    android:id="@+id/hodnoceniEmoji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/hodnoceni10"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>

        <SeekBar
            android:id="@+id/seekBarHodnoceni"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:scaleX="2"
            android:scaleY="2" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/buttonSave"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/ulozit" />

            <Button
                android:id="@+id/buttonCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/zrusit" />

            <Button
                android:id="@+id/buttonDelete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/smazat" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>